# Cards-of-War

./: .gitignore  CMakeLists.txt  IDEAS.md  README.md  build.bat  build.sh  project.4coder
assets/: Card.aseprite  GMTK-1.tmx  tileset.tsx
code/: cards.c  cards.h  entity.c  entity.h  game_state.h  grid.c  grid.h  input.h  main.c  map.c  types.h  vecmath.h
code/player_grid/: grid.c  grid.h  player.h
include/: SDL.h  SDL_image.h
